--- a/huskydoc.cabal
+++ b/huskydoc.cabal
@@ -16,7 +16,10 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Text.Huskydoc
-  build-depends:       base >= 4.7 && < 5
+                     , Text.Huskydoc.Parsing
+  build-depends:       base       >= 4.7 && < 5
+                     , megaparsec >= 4.4 && < 5.1
+                     , text       >= 1.2 && < 1.3
   default-language:    Haskell2010
 
 executable huskydoc
