--- a/huskydoc.cabal
+++ b/huskydoc.cabal
@@ -18,9 +18,11 @@ library
   exposed-modules:     Text.Huskydoc
                      , Text.Huskydoc.Inlines
                      , Text.Huskydoc.Parsing
-  build-depends:       base       >= 4.7 && < 5
-                     , megaparsec >= 4.4 && < 5.1
-                     , text       >= 1.2 && < 1.3
+  build-depends:       base             >= 4.7 && < 5
+                     , data-default     >= 0.4 && < 0.8
+                     , megaparsec       >= 4.4 && < 5.1
+                     , text             >= 1.2 && < 1.3
+                     , transformers     >= 0.4 && < 0.6
   default-language:    Haskell2010
 
 executable huskydoc
@@ -35,6 +37,8 @@ test-suite huskydoc-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
+  other-modules:       Text.Huskydoc.InlinesSpec
+                     , Text.Huskydoc.ParsingSpec
   build-depends:       base
                      , huskydoc
                      , hspec            >= 2.2 && < 2.3
