--- a/huskydoc.cabal
+++ b/huskydoc.cabal
@@ -16,6 +16,7 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     Text.Huskydoc
+                     , Text.Huskydoc.Attributes
                      , Text.Huskydoc.Inlines
                      , Text.Huskydoc.Parsing
   build-depends:       base             >= 4.7 && < 5
@@ -24,11 +25,12 @@ library
                      , text             >= 1.2 && < 1.3
                      , transformers     >= 0.4 && < 0.6
   default-language:    Haskell2010
+  Ghc-Options:         -Wall -fno-warn-unused-do-bind
 
 executable huskydoc
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , huskydoc
   default-language:    Haskell2010
@@ -37,14 +39,15 @@ test-suite huskydoc-test
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Spec.hs
-  other-modules:       Text.Huskydoc.InlinesSpec
+  other-modules:       Text.Huskydoc.AttributesSpec
+                     , Text.Huskydoc.InlinesSpec
                      , Text.Huskydoc.ParsingSpec
   build-depends:       base
                      , huskydoc
                      , hspec            >= 2.2 && < 2.3
                      , hspec-discover   >= 2.2 && < 2.3
                      , hspec-megaparsec >= 0.1 && < 0.3
-                     , megaparsec       >= 4.4 && < 5.1
+                     , megaparsec       >= 4.4 && < 5
                      , text             >= 1.2 && < 1.3
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
