--- a/huskydoc.cabal
+++ b/huskydoc.cabal
@@ -38,6 +38,7 @@ executable huskydoc
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , huskydoc
+                     , text             >= 1.2 && < 1.3
   default-language:    Haskell2010
 
 test-suite huskydoc-test
