--- a/huskydoc.cabal
+++ b/huskydoc.cabal
@@ -21,14 +21,17 @@ library
                      , Text.Huskydoc.Builders
                      , Text.Huskydoc.Document
                      , Text.Huskydoc.Inlines
+                     , Text.Huskydoc.Pandoc
+                     , Text.Huskydoc.Patterns
                      , Text.Huskydoc.Parsing
                      , Text.Huskydoc.Types
-  build-depends:       base             >= 4.7 && < 5
-                     , containers       >= 0.5 && < 0.6
-                     , data-default     >= 0.4 && < 0.8
-                     , megaparsec       >= 4.4 && < 6
-                     , text             >= 1.2 && < 1.3
-                     , transformers     >= 0.4 && < 0.6
+  build-depends:       base             >= 4.7  && < 5
+                     , containers       >= 0.5  && < 0.6
+                     , data-default     >= 0.4  && < 0.8
+                     , megaparsec       >= 4.4  && < 6
+                     , pandoc-types     >= 1.16 && < 1.17
+                     , text             >= 1.2  && < 1.3
+                     , transformers     >= 0.4  && < 0.6
   default-language:    Haskell2010
   Ghc-Options:         -Wall -fno-warn-unused-do-bind
 
