--- a/huskydoc.cabal
+++ b/huskydoc.cabal
@@ -24,7 +24,7 @@ library
                      , Text.Huskydoc.Parsing
                      , Text.Huskydoc.Patterns
                      , Text.Huskydoc.Types
-  build-depends:       base             >= 4.7  && < 5
+  build-depends:       base             >= 4.8  && < 5
                      , containers       >= 0.5  && < 0.6
                      , data-default     >= 0.4  && < 0.8
                      , megaparsec       >= 4.4  && < 6
@@ -38,9 +38,11 @@ executable huskydoc
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
-  build-depends:       base
-                     , huskydoc
-                     , text             >= 1.2 && < 1.3
+  build-depends:       huskydoc
+                     , base             >= 4.8  && < 5
+                     , aeson            >= 0.10 && < 0.12
+                     , bytestring       >= 0.10 && < 0.11
+                     , text             >= 1.2  && < 1.3
   default-language:    Haskell2010
 
 test-suite huskydoc-test
