--- a/huskydoc.cabal
+++ b/huskydoc.cabal
@@ -61,7 +61,7 @@ test-suite huskydoc-test
                      , hspec-megaparsec >= 0.1 && < 0.3
                      , megaparsec       >= 4.4 && < 6
                      , text             >= 1.2 && < 1.3
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   default-language:    Haskell2010
 
 source-repository head
